# spectral_step_dd

./: README.md  get_spectrum_clean.py  main.py  main_clean.py  pyproject.toml  run.py  utils.py
evaluation/: plot_spectrum_epochs-10-retrain2.py
models/: get_dataset.py  get_logging.py  get_loss.py  get_model.py  get_train.py  load_checkpoint.py  mcnn.py  resnet18k.py
