[tool.poetry]
name = "spectral-step-dd"
version = "0.1.0"
description = ""
authors = ["rgerum <14153051+rgerum@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "spectral_step_dd"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
fire = "^0.5.0"
torchvision = "^0.15.1"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
